objects/box__FRUP__c/box__FRUP__c.object-meta.xml
<CustomObject>
    <label>FRUP</label>
    <nameField>
        <displayFormat>FRUP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FRUP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>