objects/box__FRUP__c/fields/box__BOSS_Action__c.field-meta.xml
<CustomField>
    <fullName>box__BOSS_Action__c</fullName>
    <label>BOSS Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Lead_Move</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>