objects/box__FRUP__c/fields/box__BOSS_Status__c.field-meta.xml
<CustomField>
    <fullName>box__BOSS_Status__c</fullName>
    <label>BOSS Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Converted_Move</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>