objects/box__FRUP__c/fields/box__Box_user__c.field-meta.xml
<CustomField>
    <fullName>box__Box_user__c</fullName>
    <externalId>true</externalId>
    <label>Box user</label>
    <length>20</length>
    <type>Text</type>
</CustomField>