objects/box__FRUP__c/fields/box__CollaborationID__c.field-meta.xml
<CustomField>
    <fullName>box__CollaborationID__c</fullName>
    <label>CollaborationID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>