objects/box__FRUP__c/fields/box__New_Permission__c.field-meta.xml
<CustomField>
    <fullName>box__New_Permission__c</fullName>
    <label>New Permission</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Read/Write</fullName>
            </value>
            <value>
                <fullName>No Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>