objects/box__FRUP__c/fields/box__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>box__Record_ID__c</fullName>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>