objects/box__FRUP__c/fields/box__Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>box__Retry_Count__c</fullName>
    <description>Number of times this FRUP entry has been retried for synchronizing permissions to Box</description>
    <inlineHelpText>Number of times this FRUP entry has been retried for synchronizing permissions to Box</inlineHelpText>
    <label>Retry Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>