objects/box__FRUP__c/fields/box__Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>box__Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FRUP</relationshipName>
    <type>Lookup</type>
</CustomField>